fixed horizontal scroll

--- a/src/App.less
+++ b/src/App.less
@@ -5,5 +5,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
